# fatpicosdio

ex/DirectoryFunctions/: DirectoryFunctions.ino
ex/SdInfo/: SdInfo.ino
ex/bench/: bench.cpp
src/: CMakeLists.txt  SdCardInfo.h  SdCardInterface.h  SdFatConfig.h  SdioCard.h  SdioTeensy.cpp  bench.cpp  launch.json  sd_card.cpp  sd_card.pio  settings.json
src/ExFatLib/: ExFatFile.h
src/FatLib/: FatFileLFN.cpp
src/SdCard/: SdCard.h  SdSpiCard.h
src/common/: PrintBasic.h
src/extra/attic/: PrintBasic.h
src/iostream/: ArduinoStream.h
src/pico/: sd_card.h
